<resources>
    <string name="GOOGLE_MAP_KEY">AIzaSyCSY3be92dQNox_brS8HV_0-yQwyH9Q_L4</string>
    <!-- FR -->
    <string name="app_name">Drop And Fly</string>
    <string name="load_msg">Chargement de l\'application</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="forgot_pwd">Mot de passe oublié ?</string>
    <string name="connect_btn">Se connecter</string>
    <string name="signup_link"><u>Pas de compte ? Inscrivez-vous !</u></string>
    <string name="lastname">Nom</string>
    <string name="firstname">Prénom</string>
    <string name="confirm_pwd">Confirmation du mot de passe</string>
    <string name="signup_btn">S\'inscrire</string>
    <string name="search_bar">Rechercher une adresse</string>
    <string name="day_one">Lundi</string>
    <string name="day_two">Mardi</string>
    <string name="day_three">Mercredi</string>
    <string name="day_four">Jeudi</string>
    <string name="day_five">Vendredi</string>
    <string name="day_six">Samedi</string>
    <string name="day_seven">Dimanche</string>

    <string name="detail1">Détail de la consigne</string>
    <string name="detail2">Lieu de dépose</string>
    <string name="detail3">Date de dépose</string>
    <string name="detail4">Heure de dépose</string>
    <string name="detail5">Date de retrait</string>
    <string name="detail6">Heure de retrait</string>
    <string name="detail7">Nombre de bagages</string>
    <string name="detail8">Prix calculé :</string>

    <string name="history">Historique</string>

    <string name="en_attente">Demandes en attente</string>
    <string name="en_cours">Stockage en cours</string>

    <string name="adresse">Entrez une adresse</string>

    <string name="reservation">Réservation de votre consigne</string>
    <string name="reserver">Réserver : 10 € </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="error">Erreur</string>

    <!-- Database -->

    <string name="shops">shops</string>
    <string name="users">users</string>
    <string name="reservations">reservations</string>
    <string name="title_activity_maps2">Map</string>

    <string-array name="user_spinner">
        <item>Demandes En Attente</item>
        <item>Demandes Acceptés</item>
        <item>Demandes En Cours</item>
        <item>Demandes Terminées</item>
        <item>Demandes Réfusées</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string-array name="fragment">
        <item>ReservationItemFragment</item>
    </string-array>
</resources>
