<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".connection.ConnectionActivity"
    android:layout_margin="50dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/reg_email_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/reg_email_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"/>

    <TextView
        android:id="@+id/reg_lastname_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/lastname"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/reg_lastname_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/lastname"/>

    <TextView
        android:id="@+id/reg_firstname_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/firstname"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/reg_firstname_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/firstname"/>

    <TextView
        android:id="@+id/reg_password_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/reg_password_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/reg_confirm_password_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/confirm_pwd"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/reg_confirm_password_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/reg_registration_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="40dp"
        android:text="@string/signup_btn"/>


</LinearLayout>