<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.common.connection.ConnectionActivity"
        android:layout_margin="40dp"
        android:orientation="vertical"
        android:weightSum="8">

        <TextView
            android:id="@+id/con_email_text"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email"
            android:textSize="@dimen/font_size_medium"/>


        <EditText
            android:id="@+id/con_email_edit"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:hint="@string/email"
            android:textSize="@dimen/font_size_small"/>

        <TextView
            android:id="@+id/con_password_text"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="30dp"
            android:text="@string/password"
            android:textSize="@dimen/font_size_medium"/>

        <EditText
            android:id="@+id/con_password_edit"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:hint="************"
            android:inputType="textPassword"
            android:textSize="@dimen/font_size_small"/>

        <TextView
            android:id="@+id/con_forgot_pwd_text"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_pwd"
            android:clickable="true"
            android:textSize="@dimen/font_size_small"/>

        <Button
            android:id="@+id/con_connect_btn"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/connect_btn"/>

        <TextView
            android:id="@+id/con_signup_link_text"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup_link"
            android:clickable="true"
            android:textSize="@dimen/font_size_medium"/>
    </LinearLayout>
